# fzfdapter

./: .gitignore  Cargo.toml  README.md  config.toml.example  flake.nix  package.nix  rustfmt.toml  shell.nix
src/: cache.rs  config.rs  handlers.rs  main.rs  store.rs
