[package]
name = "fzfdapter"
authors = [ "kittywitch" ]
license = "GPL3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
fork = "0.3.1"
freedesktop-desktop-entry = "0.7.19"
indexmap = { version = "2.12.0", features = ["serde"] }
is_executable = "1.0.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
xdg = "3.0.0"
